--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -8,6 +8,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:src="@mipmap/start_page"
-        android:scaleType="centerCrop"
+        android:scaleType="fitXY"
         />
 </layout>
