--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -120,5 +120,33 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="ll_editdetail">
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:background">@drawable/input_bg</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="tv_editdetail_title">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#999999</item>
+        <item name="android:layout_width">130dp</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="tv_editdetail_cotent">
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:textColor">#999999</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="iv_editdetail_end">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 
 </resources>
