--- a/app/src/main/res/layout/activity_editorder.xml
+++ b/app/src/main/res/layout/activity_editorder.xml
@@ -8,7 +8,7 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <include
             android:id="@+id/title_bar"
@@ -20,7 +20,7 @@
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -200,7 +200,10 @@
         </LinearLayout>
 
             </ScrollView>
+
+
             <TextView
+                android:id="@+id/tv_commit"
                 android:padding="10dp"
                 android:gravity="center"
                 android:text="提交"
@@ -211,8 +214,6 @@
                 android:layout_height="wrap_content"/>
 
     </LinearLayout>
-
-
 
 
 
